--- a/code/notebooks/CleanWordDocument.ipynb
+++ b/code/notebooks/CleanWordDocument.ipynb
@@ -91,122 +91,122 @@
       "Output file: D:\\_Customers\\EMA\\EPI\\code\\data\\WordPIs\\Abasaglar-h-2835-en_clean\n",
       "\n",
       "Checking table 20\n",
-      "The selection starts on page 105 of 106 (69.8499984741211/70.94999694824219)\n",
-      "The selection ends on page 105 of 106 (384.70001220703125/70.94999694824219)\n",
+      "The selection starts on page 105 of 106 (69.69999694824219/70.8499984741211)\n",
+      "The selection ends on page 1 of 106 (384.75/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "\n",
       "Checking table 19\n",
-      "The selection starts on page 103 of 106 (579.2000122070312/70.94999694824219)\n",
-      "The selection ends on page 105 of 106 (56.95000076293945/70.94999694824219)\n",
+      "The selection starts on page 103 of 106 (579.4500122070312/70.8499984741211)\n",
+      "The selection ends on page 105 of 106 (56.45000076293945/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "\n",
       "Checking table 18\n",
-      "The selection starts on page 102 of 105 (564.7000122070312/214.9499969482422)\n",
-      "The selection ends on page 103 of 105 (421.79998779296875/70.94999694824219)\n",
+      "The selection starts on page 102 of 105 (565.0499877929688/214.85000610351562)\n",
+      "The selection ends on page 103 of 105 (421.6499938964844/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "* overlay shapes\n",
       "\n",
       "Checking table 17\n",
-      "The selection starts on page 102 of 105 (56.95000076293945/70.94999694824219)\n",
-      "The selection ends on page 102 of 105 (476.04998779296875/70.94999694824219)\n",
+      "The selection starts on page 102 of 105 (56.45000076293945/70.8499984741211)\n",
+      "The selection ends on page 102 of 105 (475.79998779296875/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "\n",
       "Checking table 16\n",
-      "The selection starts on page 100 of 105 (578.1500244140625/70.94999694824219)\n",
-      "The selection ends on page 101 of 105 (484.6499938964844/70.94999694824219)\n",
+      "The selection starts on page 100 of 105 (577.75/70.8499984741211)\n",
+      "The selection ends on page 101 of 105 (484.3999938964844/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "\n",
       "Checking table 15\n",
-      "The selection starts on page 100 of 105 (196.64999389648438/70.94999694824219)\n",
-      "The selection ends on page 100 of 105 (331.5/70.94999694824219)\n",
+      "The selection starts on page 100 of 105 (196.39999389648438/70.8499984741211)\n",
+      "The selection ends on page 100 of 105 (331.79998779296875/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "\n",
       "Checking table 14\n",
-      "The selection starts on page 100 of 105 (56.95000076293945/70.94999694824219)\n",
-      "The selection ends on page 100 of 105 (196.64999389648438/70.94999694824219)\n",
+      "The selection starts on page 100 of 105 (56.45000076293945/70.8499984741211)\n",
+      "The selection ends on page 100 of 105 (196.39999389648438/70.8499984741211)\n",
       "The selection contains\n",
       "* inline images\n",
       "\n",
       "Checking table 13\n",
-      "The selection starts on page 94 of 105 (613.0499877929688/70.94999694824219)\n",
-      "The selection ends on page 95 of 105 (663.5999755859375/70.94999694824219)\n",
+      "The selection starts on page 94 of 105 (613.4500122070312/70.8499984741211)\n",
+      "The selection ends on page 95 of 105 (664.1500244140625/70.8499984741211)\n",
       "The selection contains\n",
       "\n",
       "Checking table 12\n",
-      "The selection starts on page 86 of 105 (69.30000305175781/70.94999694824219)\n",
-      "The selection ends on page 86 of 105 (416.3999938964844/70.94999694824219)\n",
+      "The selection starts on page 86 of 105 (69.0999984741211/70.8499984741211)\n",
+      "The selection ends on page 86 of 105 (416.45001220703125/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "\n",
       "Checking table 11\n",
-      "The selection starts on page 84 of 105 (631.9000244140625/70.94999694824219)\n",
-      "The selection ends on page 85 of 105 (744.7000122070312/70.94999694824219)\n",
+      "The selection starts on page 84 of 105 (631.8499755859375/70.8499984741211)\n",
+      "The selection ends on page 85 of 105 (744.75/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "* overlay shapes\n",
       "\n",
       "Checking table 10\n",
-      "The selection starts on page 83 of 105 (767.7999877929688/70.94999694824219)\n",
-      "The selection ends on page 84 of 105 (475.5/70.94999694824219)\n",
+      "The selection starts on page 83 of 105 (767.7999877929688/70.8499984741211)\n",
+      "The selection ends on page 84 of 105 (475.79998779296875/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "* overlay shapes\n",
       "\n",
       "Checking table 9\n",
-      "The selection starts on page 83 of 105 (237.5/70.94999694824219)\n",
-      "The selection ends on page 83 of 105 (659.7999877929688/70.94999694824219)\n",
+      "The selection starts on page 83 of 105 (237.3000030517578/70.8499984741211)\n",
+      "The selection ends on page 83 of 105 (660.0999755859375/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "\n",
       "Checking table 8\n",
-      "The selection starts on page 82 of 105 (406.75/70.94999694824219)\n",
-      "The selection ends on page 83 of 105 (153.64999389648438/70.94999694824219)\n",
+      "The selection starts on page 82 of 105 (406.6499938964844/70.8499984741211)\n",
+      "The selection ends on page 83 of 105 (153.8000030517578/70.8499984741211)\n",
       "The selection contains\n",
       "* overlay images\n",
       "* overlay shapes\n",
       "\n",
       "Checking table 7\n",
-      "The selection starts on page 81 of 106 (667.9000244140625/70.94999694824219)\n",
-      "The selection ends on page 82 of 106 (138.10000610351562/70.94999694824219)\n",
+      "The selection starts on page 81 of 106 (667.5999755859375/70.8499984741211)\n",
+      "The selection ends on page 82 of 106 (138.25/70.8499984741211)\n",
       "The selection contains\n",
       "* inline images\n",
       "\n",
       "Checking table 6\n",
-      "The selection starts on page 81 of 106 (545.3499755859375/70.94999694824219)\n",
-      "The selection ends on page 81 of 106 (667.9000244140625/70.94999694824219)\n",
+      "The selection starts on page 81 of 106 (544.9000244140625/70.8499984741211)\n",
+      "The selection ends on page 81 of 106 (667.5999755859375/70.8499984741211)\n",
       "The selection contains\n",
       "* inline images\n",
       "\n",
       "Checking table 5\n",
-      "The selection starts on page 81 of 106 (112.8499984741211/70.94999694824219)\n",
-      "The selection ends on page 81 of 106 (195.0500030517578/70.94999694824219)\n",
+      "The selection starts on page 81 of 106 (112.9000015258789/70.8499984741211)\n",
+      "The selection ends on page 81 of 106 (194.6999969482422/70.8499984741211)\n",
       "The selection contains\n",
       "* inline images\n",
       "\n",
       "Checking table 4\n",
-      "The selection starts on page 76 of 106 (524.9500122070312/70.94999694824219)\n",
-      "The selection ends on page 77 of 106 (575.4500122070312/70.94999694824219)\n",
+      "The selection starts on page 76 of 106 (524.75/70.8499984741211)\n",
+      "The selection ends on page 77 of 106 (575.4000244140625/70.8499984741211)\n",
       "The selection contains\n",
       "\n",
       "Checking table 3\n",
-      "The selection starts on page 64 of 106 (638.8499755859375/70.94999694824219)\n",
-      "The selection ends on page 66 of 106 (107.44999694824219/70.94999694824219)\n",
+      "The selection starts on page 64 of 106 (638.7999877929688/70.8499984741211)\n",
+      "The selection ends on page 66 of 106 (107.1500015258789/70.8499984741211)\n",
       "The selection contains\n",
       "\n",
       "Checking table 2\n",
-      "The selection starts on page 22 of 106 (157.9499969482422/70.94999694824219)\n",
-      "The selection ends on page 22 of 106 (503.45001220703125/70.94999694824219)\n",
+      "The selection starts on page 22 of 106 (157.8000030517578/70.8499984741211)\n",
+      "The selection ends on page 22 of 106 (503.3999938964844/70.8499984741211)\n",
       "The selection contains\n",
       "\n",
       "Checking table 1\n",
-      "The selection starts on page 7 of 106 (512.0499877929688/70.94999694824219)\n",
-      "The selection ends on page 8 of 106 (358.95001220703125/70.94999694824219)\n",
+      "The selection starts on page 7 of 106 (512.0499877929688/70.8499984741211)\n",
+      "The selection ends on page 8 of 106 (358.8500061035156/70.8499984741211)\n",
       "The selection contains\n"
      ]
     }
@@ -282,6 +282,9 @@
     "    raise\n",
     "finally:\n",
     "    doc.Save()\n",
+    "    \n",
+    "    doc.WebOptions.AllowPNG = True\n",
+    "    \n",
     "    doc.SaveAs(out_file, FileFormat = wdFormatFilteredHTML)\n",
     "    doc.SaveAs(out_file, FileFormat = wdFormatWebArchive)\n",
     "    doc.Close()\n",
