updated testing notebook

--- a/function_code/code/test notebook final v1.ipynb
+++ b/function_code/code/test notebook final v1.ipynb
@@ -1886,4 +1886,83 @@
      "text": [
       " ΚΥΚΛΟΦΟΡΙΑΣ' | Qrd txt :- '8. ΑΡΙΘΜΟΣ(ΟΙ) ΑΔΕΙΑΣ ΚΥΚΛΟΦΟΡΙΑΣ' | Matched :- 'True'ssed | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | Doc txt :- '12.    ΑΡΙΘΜΟΣ(ΟΙ)\n",
       "2021-05-12 17:27:07,621 : Heading Extraction Kalydeco_clean_SmPC.json_H : Validation Flow Is Broken | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | currHeadId :- '16056' | currParentHeadId :- '16001.0' | prevParentHeadId :- '16003'\n",
-      "2021-05-12 17:27:07,628 : Heading Extraction Kalydeco_clean_SmPC.json_H : Validation Passed | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | currHeadId :- '16056' | 
+      "2021-05-12 17:27:07,628 : Heading Extraction Kalydeco_clean_SmPC.json_H : Validation Passed | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | currHeadId :- '16056' | currParentHeadId :- '16001.0' | prevParentHeadId :- '16003'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " ΠΡΟΪΟΝΤΟΣ' | Qrd txt :- '1. ΟΝΟΜΑΣΙΑ ΤΟΥ ΦΑΡΜΑΚΕΥΤΙΚΟΥ ΠΡΟΪΟΝΤΟΣ' | Matched :- 'True' | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | Doc txt :- '1.       ΟΝΟΜΑΣΙΑ\n",
+      "2021-05-12 17:27:13,023 : Heading Extraction Kalydeco_clean_SmPC.json_H : Validation Failed As Wrong Heading Found | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | currHeadId :- '16003' | currParentHeadId :- '16001.0' | prevParentHeadId :- '16056'\n",
+      "2021-05-12 17:27:13,881 : Heading Extraction Kalydeco_clean_SmPC.json_H : End Of Sub Section | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json\n",
+      " ΠΡΟΪΟΝΤΟΣ' | Qrd txt :- '1. ΟΝΟΜΑΣΙΑ ΤΟΥ ΦΑΡΜΑΚΕΥΤΙΚΟΥ ΠΡΟΪΟΝΤΟΣ' | Matched :- 'True' | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | Doc txt :- '1.       ΟΝΟΜΑΣΙΑ\n",
+      "2021-05-12 17:27:14,015 : Heading Extraction Kalydeco_clean_SmPC.json_H : Validation Passed As This The First Heading | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | currHeadId :- '16003' | currParentHeadId :- '16001.0' | prevParentHeadId :- ''\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oooooooooooooooooooooooooooooooooooooooo END OF Sub Section oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " ΚΥΚΛΟΦΟΡΙΑΣ' | Qrd txt :- '8. ΑΡΙΘΜΟΣ(ΟΙ) ΑΔΕΙΑΣ ΚΥΚΛΟΦΟΡΙΑΣ' | Matched :- 'True'ssed | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | Doc txt :- '12.    ΑΡΙΘΜΟΣ(ΟΙ)\n",
+      "2021-05-12 17:27:20,830 : Heading Extraction Kalydeco_clean_SmPC.json_H : Validation Flow Is Broken | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | currHeadId :- '16056' | currParentHeadId :- '16001.0' | prevParentHeadId :- '16003'\n",
+      "2021-05-12 17:27:20,835 : Heading Extraction Kalydeco_clean_SmPC.json_H : Validation Passed | H | CAP |  el | 0 | Kalydeco_clean_SmPC.json | currHeadId :- '16056' | currParentHeadId :- '16001.0' | prevParentHeadId :- '16003'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "parseDocument(controlFolderPath, outputFolderPath, htmlFileName, fileNameQrd, fileNameMatchRuleBook, fileNameDocumentTypeNames, medName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
